style.css
body {
	background-color: #FFEEE1;
	margin: 30px;
}
h1, h2 {
	font-family: 'Amatic SC', cursive;
	text-align: center;
	border-radius: 5px;
	padding: 10px;
	background-color: #F6BED4;

}
.banner {

}

.banner img {
    
    margin-left: auto;
    margin-right: auto;
    width: 32%;

	border-radius: 20px;
}

.third {
	width: 32%;
	border-radius: 10px;
}

.half {
	width: 49%;
	border-radius: 10px;

}

.quote {
	width: 20%;
	flex: none;
	align-self: auto;

}

.testimonials {
	display: flex;
	height: auto;
	justify-content: space-around;

}

.footer img {
	width: 50%;
	display: block;
	margin: auto;
	border-radius: 15px;
}

.reed {
	font-family: 'Pangolin', cursive;
}

.drew {
	font-family: 'Indie Flower', cursive;
}

.cole {
	font-family: 'Gloria Hallelujah', cursive;
}

.layne {
	font-family: 'Gamja Flower', cursive;
}

#ma {
	font-family: 'Josefin Sans', sans-serif;
}

